--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -48,9 +48,11 @@ jobs:
       - name: Deploy Resources
         run: |
           sam deploy \
+            --template-file template.yaml \
             --stack-name $STACK_NAME \
             --region $AWS_REGION \
             --capabilities CAPABILITY_IAM \
-            --parameter-overrides $(cat params.json | jq -r to_entries[] | "\(.key)=\(.value)"') \
+            --parameter-overrides $(cat params.json | jq -r 'to_entries[] | "\(.key)=\(.value)"') \
             --no-confirm-changeset \
             --no-fail-on-empty-changeset
+
