--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -56,6 +56,7 @@ jobs:
             --stack-name $STACK_NAME \
             --region $AWS_REGION \
             --capabilities CAPABILITY_IAM \
+            --s3-bucket dilli-data-engineering-practice-artifacts \
             --parameter-overrides $(cat params.json | jq -r 'to_entries[] | "\(.key)=\(.value)"') \
             --no-confirm-changeset \
             --no-fail-on-empty-changeset
