--- a/template.yaml
+++ b/template.yaml
@@ -7,11 +7,15 @@ Parameters:
     Type: String
     Description: S3 bucket to store Lambda output
 
+Global:
+  Function:
+    Handler: lambda_function.lambda_handler
+
 Resources:
   ServiceNowDataAnalysisSecret:
     Type: AWS::SecretsManager::Secret
     Properties:
-      Name: MyLambdaSecret
+      Name: service-now-data-analysis-secret
       Description: Secret for Lambda
       SecretString: !Sub |
         {
@@ -23,9 +27,10 @@ Resources:
   ServiceNowDataAnalysisLambdaExecutionRole:
     Type: AWS::IAM::Role
     Properties:
-      RoleName: ServiceNowDataAnalysisLambdaExecutionRole
+      RoleName: service-now-data-analysis-lambda-execution-role
+      Description: Role for ServiceNow data analysis Lambda function
       AssumeRolePolicyDocument:
-        Version: '2012-10-17'
+        Version: '2012-10-17' 
         Statement:
           - Effect: Allow
             Principal:
@@ -77,7 +82,7 @@ Resources:
       MemorySize: 1024
       Environment:
         Variables:
-          SECRET_ARN: !Ref ServiceNowDataAnalysisSecret
+          SERVICENOW_SECRET_NAME: !Ref ServiceNowDataAnalysisSecret
       Layers:
         - !Ref ServiceNowDataAnalysisRequestsLayer
 
