--- a/template.yaml
+++ b/template.yaml
@@ -7,7 +7,7 @@ Parameters:
     Type: String
     Description: S3 bucket to store Lambda output
 
-Global:
+Globals:
   Function:
     Handler: lambda_function.lambda_handler
 
