--- a/template.yaml
+++ b/template.yaml
@@ -59,7 +59,7 @@ Resources:
   ServiceNowDataAnalysisLambdaInvokeRole:
     Type: AWS::IAM::Role
     Properties:
-      RoleName: service-now-data-analysis-lambda-invoke-role
+      RoleName: "service-now-data-analysis-lambda-invoke-role"
       Description: Role for invoking ServiceNow data analysis Lambda function
       AssumeRolePolicyDocument:
         Version: '2012-10-17'
@@ -110,22 +110,13 @@ Resources:
   ServiceNowDataAnalysisDataIngestionLambdaSchedule:
     Type: AWS::Scheduler::Schedule
     Properties:
-      Name: service-now-data-ingestion-schedule
-      ScheduleExpression: rate(30 minutes)
+      Name: "service-now-data-ingestion-schedule"
+      ScheduleExpression: "cron(0/30 * * * ? *)"
       FlexibleTimeWindow:
-        Mode: OFF
+        Mode: "OFF"
       Target:
         Arn: !GetAtt ServiceNowDataAnalysisDataIngestionLambda.Arn
         RoleArn: !GetAtt ServiceNowDataAnalysisLambdaInvokeRole.Arn
-
-  LambdaInvokePermission:
-    Type: AWS::Lambda::Permission
-    Properties:
-      FunctionName: !Ref ServiceNowDataAnalysisDataIngestionLambda
-      Action: lambda:InvokeFunction
-      Principal: events.amazonaws.com
-      SourceArn: !GetAtt ServiceNowDataAnalysisDataIngestionLambdaEventRule.Arn
-
 
   LambdaLogGroup:
     Type: AWS::Logs::LogGroup
